force-app/main/default/objects/ZRH_Glosas__c/ZRH_Glosas__c.object-meta.xml
<CustomObject>
    <label>Glosas</label>
    <nameField>
        <label>Nombre Glosa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Glosas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>