force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_Activo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo indica si la glosa esta activa para su asignación al plan, sino esta activo no debe considerarse para las automatizaciones asociadas.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>