force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_Contrato__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Glosas</relationshipLabel>
    <relationshipName>Glosas</relationshipName>
    <type>Lookup</type>
</CustomField>