force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_IDGlosa__c.field-meta.xml
<CustomField>
    <fullName>ZRH_IDGlosa__c</fullName>
    <description>Identificador de Glosa</description>
    <label>ID Glosa</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>