force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_InformacionDinamica__c.field-meta.xml
<CustomField>
    <fullName>ZRH_InformacionDinamica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Información DInámica</label>
    <type>Checkbox</type>
</CustomField>