force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>ZRH_InsurancePolicy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Póliza</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipName>RCondiciones_Particulares_Glosas</relationshipName>
    <type>Lookup</type>
</CustomField>