force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_ModificacionGlosasEspeciales__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ModificacionGlosasEspeciales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificación de Glosas Especiales</label>
    <type>Checkbox</type>
</CustomField>