force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_ModificacionGlosasEspecialesOpuesto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ModificacionGlosasEspecialesOpuesto__c</fullName>
    <formula>!ZRH_ModificacionGlosasEspeciales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZRH_ModificacionGlosasEspecialesOpuesto</label>
    <type>Checkbox</type>
</CustomField>