force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_NombreArticulo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreArticulo__c</fullName>
    <description>Nombre del articulo relacionado a la glosa (Categoría glosa)</description>
    <label>Nombre Artículo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>