force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_NumeroArticulo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroArticulo__c</fullName>
    <description>N° de articulo que corresponde la glosa</description>
    <label>Número Artículo</label>
    <length>4</length>
    <type>Text</type>
</CustomField>