force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_Plan__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Plan__c</fullName>
    <description>Este campo define el plan para el cual aplicara la glosa, la glosa puede aplicar a uno o mas planes</description>
    <label>Plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>501</fullName>
            </value>
            <value>
                <fullName>502</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>601</fullName>
            </value>
            <value>
                <fullName>602</fullName>
            </value>
            <value>
                <fullName>603</fullName>
            </value>
            <value>
                <fullName>604</fullName>
            </value>
            <value>
                <fullName>605</fullName>
            </value>
            <value>
                <fullName>606</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>