force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_PlanDelContrato__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PlanDelContrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan del Contrato</label>
    <referenceTo>ContractGroupPlan</referenceTo>
    <relationshipLabel>Glosas</relationshipLabel>
    <relationshipName>Glosas</relationshipName>
    <type>Lookup</type>
</CustomField>