force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_Quote__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>RCondiciones_Particulares_Glosas</relationshipName>
    <type>Lookup</type>
</CustomField>