force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>ZRH_QuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partida de presupuesto</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Glosas</relationshipLabel>
    <relationshipName>Glosas</relationshipName>
    <type>Lookup</type>
</CustomField>