force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_TipoDeGlosa__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoDeGlosa__c</fullName>
    <description>Puede ser una Glosa Estándar o una Glosa Condicional o Manual</description>
    <label>Tipo de Glosa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G-001</fullName>
                <label>Estándar</label>
            </value>
            <value>
                <fullName>G-002</fullName>
                <label>Condicional</label>
            </value>
            <value>
                <fullName>G-003</fullName>
                <label>Especial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>