force-app/main/default/objects/ZRH_Glosas__c/fields/ZRH_Titulo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Titulo__c</fullName>
    <label>Título</label>
    <length>255</length>
    <type>Text</type>
</CustomField>