force-app/main/default/objects/ZRH_Glosas__c/validationRules/ZRH_ValidacionModficacionGlosaEspecial.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionModficacionGlosaEspecial</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISNEW() == FALSE,
  ISCHANGED(ZRH_ModificacionGlosasEspeciales__c) == FALSE,
  ISCHANGED(ZRH_PlanDelContrato__c) == FALSE
)</errorConditionFormula>
    <errorMessage>No es posible Modificar las Glosas</errorMessage>
</ValidationRule>