force-app/main/default/objects/ZRH_Glosas__c/validationRules/ZRH_ValidacionModficacionSuspcriptor.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionModficacionSuspcriptor</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!ISNEW(),   $UserRole.Name  =&apos;Suscriptor&apos;)</errorConditionFormula>
    <errorMessage>Esta acción no se puede realizar.</errorMessage>
</ValidationRule>