force-app/main/default/objects/ZRH_Glosas__c/listViews/ZRH_GlosasEspeciales.listView-meta.xml
<ListView>
    <fullName>ZRH_GlosasEspeciales</fullName>
    <columns>NAME</columns>
    <columns>ZRH_IDGlosa__c</columns>
    <columns>ZRH_TipoDeGlosa__c</columns>
    <columns>ZRH_Activo__c</columns>
    <columns>ZRH_DestinoTipoPDF__c</columns>
    <columns>ZRH_Titulo__c</columns>
    <columns>ZRH_ContenidoGlosa__c</columns>
    <columns>ZRH_Plan__c</columns>
    <columns>ZRH_LocalizacionCondicionado__c</columns>
    <columns>ZRH_Quote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ZRH_TipoDeGlosa__c</field>
        <operation>equals</operation>
        <value>G-003</value>
    </filters>
    <label>Glosas Especiales</label>
</ListView>